--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: blue;
+    background-color: rgb(157, 255, 0);
 }
 color {color: beige;}
