--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(157, 255, 0);
+    background-color: rgb(207, 30, 7);
 }
-color {color: beige;}
+color {color: rgb(13, 212, 113);}
