--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial,sans-serif;
     background-color: rgb(207, 30, 7);
 }
 color {color: rgb(13, 212, 113);}
