--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial,sans-serif;
+    font-family: monospace;
     background-color: rgb(160, 138, 12);
 }
 color {color: rgb(230, 6, 21);}
